<resources>
    <string name="app_name">AndroidFundamentalsGroup1</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="search_for_names">Search for names</string>
    <string name="our_first_textview">Our first TextView</string>
    <string name="i_am_a_button">I am a button</string>
    <string name="full_name">Full name</string>
    <string name="a_accept_t_and_c">A accept T and C</string>
    <string name="first_text">first text</string>
    <string name="second_text">second text</string>
    <string name="new_text">This is the new text</string>
    <string name="default_full_name">Magda Miu</string>
    <string name="checkbox_checked">Checkbox was checked</string>
    <string name="checkbox_unchecked">Checkbox was unchecked</string>
    <string name="checkbox_state_checked">Checkbox checked</string>
    <string name="checkbox_state_unchecked">Checkbox unchecked</string>
    <string name="error_missing_text">Please add some text</string>
    <string name="top_long_text">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device launched in September 2008.  It is free and open source software; its source code is known as Android Open Source Project (AOSP), which is primarily licensed under the Apache License. However most Android devices ship with additional proprietary software pre-installed,[10] most notably Google Mobile Services (GMS)[11] which includes core apps such as Google Chrome, the digital distribution platform Google Play and associated Google Play Services development platform. About 70 percent of Android smartphones run Google\'s ecosystem;[12] competing Android ecosystems and forks include Fire OS (developed by Amazon) or LineageOS. However the \"Android\" name and logo are trademarks of Google which impose standards to restrict \"uncertified\" devices outside their ecosystem to use Android branding</string>
    <string name="bottom_long_text">The source code has been used to develop variants of Android on a range of other electronics, such as game consoles, digital cameras, portable media players, PCs and others, each with a specialized user interface. Some well known derivatives include Android TV for televisions and Wear OS for wearables, both developed by Google. Software packages on Android, which use the APK format, are generally distributed through proprietary application stores like Google Play Store, Samsung Galaxy Store, and Huawei AppGallery, or open source platforms like Aptoide or F-Droid.  Android has been the best-selling OS worldwide on smartphones since 2011 and on tablets since 2013. As of May 2017, it has over two billion monthly active users, the largest installed base of any operating system, and as of August 2020, the Google Play Store features over 3 million apps.[15] The current stable version is Android 11, released on September 8, 2020.</string>
    <string name="select_an_android_version">Select an Android version</string>
    <string name="textview">TextView</string>
    <string name="hello_world">Hello World!</string>
    <string name="open_second_activity">Open Second Activity</string>
    <string name="hello_message">hello from first activity</string>
    <string name="button_for_startactivityforresult">Button for startActivityForResult</string>
    <string name="write_a_message_here">Write a message here...</string>
    <string name="error_missing_message">Please add some text here...</string>
    <string name="open_form_activity">Open Form Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_not_a_number">Please add a numeric value</string>
    <string name="sum_result">\"The sum is = \"</string>
    <string name="open_sum_activity">Open Sum Activity</string>
    <string name="sum_with_bundle">Sum with Bundle</string>
    <string name="sum_with_method_setter">Sum with Method (setter)</string>
    <string name="result_sum_from_fragment">\"Sum of the numbers received from fragment = \"</string>
    <string name="send_numbers_to_activity">Send numbers to Activity</string>
    <string name="second_number">Second number</string>
    <string name="first_number">First number</string>
    <string name="back_button_pressed">Back button was pressed</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_navigation_drawer_activity">Open Navigation Drawer Activity</string>
    <string name="first_text_in_a_card_view">first text in a cardview</string>
    <string name="second_text_in_a_card_view">Second text in a cardview</string>
    <string name="third_text_in_a_card_view">Third  text in a cardview</string>
    <string name="open_style_activity">Open Style Activity</string>
    <string name="forth_text_in_a_card_view">A new text, the 4th one...</string>
    <string name="new_text_in_card">This is the 5th text here...</string>
    <string name="go_to_first_activity">Go to code challange #2</string>
    <string name="text_2">text 2</string>
    <string name="text_1">Text 1</string>
    <string name="text_3">text 3</string>
    <string name="message1">Because Mount Everest is the highest mountain in the world, it has attracted considerable attention and climbing attempts. Whether the mountain was climbed in ancient times is unknown. It may have been climbed in 1924, although this has never been confirmed, as both of the men making the attempt failed to return from the mountain. Several climbing routes has been established over several decades of climbing expeditions to the mountain. The worlds highest mountain Mount Everest is 0.86m higher than had been previously officially calculated, Nepal and China have jointly announced.
        Until now the countries differed over whether to add the snow cap on top. The new height is 8,848.86m (29,032 ft).
        Chinas previous official measurement of 8,844.43m had put the mountain nearly four metres lower than Nepals.
        Everest stands on the border between China and Nepal and mountaineers climb it from both sides.
        Officials at Nepals foreign ministry and department of survey said surveyors from both countries had co-ordinated to agree on the new height.
        The agreement to jointly announce the new measurement of the Earths highest point was made during Chinese President Xi Jinpings visit to the Nepalese capital, Kathmandu last year.
        Why the difference over official height
        Chinese authorities had said previously Mount Everest should be measured to its rock height, while Nepalese authorities argued the snow on top of the summit should be included.
        The Chinese surveyors had calculated their figure after they measured the mountain in 2005.
        Nepals government officials told the BBC in 2012 that they were under pressure from China to accept the Chinese height and therefore they had decided to go for a fresh measurement to "set the record straight once and for all".
        The 8,848m height Nepal had been using for Mount Everest was determined by the Survey of India in 1954, but for the first time the country has now conducted its own measurement of the summit.
        Four Nepalese land surveyors spent two years training for the mission, before heading to the summit.
        "For summiteers, scaling the highest peak means a great accomplishment. For us, it was just the beginning," Mr Gautam had told BBC Nepali after his return.
        "Unlike other surveys of the Everest in the past, we chose 03:00 to minimise errors that could have been caused because of sunlight in the day time."
        Why else has the height been questioned?
        Some geologists have suggested a major earthquake in 2015 may have had an impact on Mount Everests height. The 7.8 magnitude earthquake killed nearly 9,000 people in Nepal, and caused an avalanche which buried parts of the base camp at the mountain. At least 18 climbers were killed.
        How was Mount Everest re-measured?
        The heights of mountains are measured with the mean sea level as the base. So its less about working out the where the top is, than where the bottom would be.
        Nepal used the Bay of Bengal as its sea level, but India had already surveyed a point closer to Everest, near the India-Nepal border, from the bay, and was able to provide the Nepalese surveyors with the height at that point.
        From there, Nepal built a network of line-of-sight stations stretching nearly 250km (155 miles) to the point Everest first become visible, creating a chain of points it could measure and add together.
        The Chinese surveyors, according to the state-run China Daily, used the Yellow Sea in the eastern province of Shandong as their sea-level base.
    </string>
    <string name="message2">There are a number of routes on K2, of somewhat different character, but they all share some key difficulties, the first being the extremely high altitude and resulting lack of oxygen: there is only one-third as much oxygen available to a climber on the summit of K2 as there is at sea level.[74] The second is the propensity of the mountain to experience extreme storms of several days duration, which have resulted in many of the deaths on the peak. The third is the steep, exposed, and committing nature of all routes on the mountain, which makes retreat more difficult, especially during a storm. Despite many attempts there have been no successful winter ascents. All major climbing routes lie on the Pakistani side, which is also where base camp is located.</string>
    <string name="https_www_android_com">https://www.android.com/</string>
    <string name="barcelona">Barcelona</string>
    <string name="we_love_android">We love Android! :)</string>
    <string name="open_website">open website</string>
    <string name="open_location">open location</string>
    <string name="share_text">share text</string>
    <string name="_8005551234">8005551234</string>
    <string name="call">call</string>
</resources>